// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultLayout should render correctly - no data 1`] = `
<div
  data-ouia-bundle=""
  data-ouia-safe="true"
  id="chrome-app-render-root"
  landing="true"
/>
`;

exports[`DefaultLayout should render correctly 1`] = `
<div
  data-ouia-app-id="app-id"
  data-ouia-bundle="some-location"
  data-ouia-safe="true"
  data-ouia-subnav="some-app"
  id="chrome-app-render-root"
/>
`;

exports[`DefaultLayout should render correctly with pageAction 1`] = `
<div
  data-ouia-app-id="app-id"
  data-ouia-bundle="some-location"
  data-ouia-page-type="some-action"
  data-ouia-safe="true"
  data-ouia-subnav="some-app"
  id="chrome-app-render-root"
/>
`;

exports[`DefaultLayout should render correctly with pageObjectId 1`] = `
<div
  data-ouia-app-id="app-id"
  data-ouia-bundle="some-location"
  data-ouia-page-object-id="some-object-id"
  data-ouia-safe="true"
  data-ouia-subnav="some-app"
  id="chrome-app-render-root"
/>
`;

exports[`DefaultLayout should render correctly with pageObjectId and pageAction 1`] = `
<div
  data-ouia-app-id="app-id"
  data-ouia-bundle="some-location"
  data-ouia-page-object-id="some-object-id"
  data-ouia-page-type="some-action"
  data-ouia-safe="true"
  data-ouia-subnav="some-app"
  id="chrome-app-render-root"
/>
`;
